--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,32 @@
 ---
+// David Cojocaru
+// Full Stack Developer from Romania
+// I am a self-taught developer who loves to build things for the web. I have been coding for 3 years now and I am always looking to learn new things. I am currently working on a few projects, but I am always open to new opportunities.
+
+import Navbar from '../components/Navbar.astro';
+
 interface Props {
 	title: string;
+	description?: string;
+	og?: {
+		title: string;
+		description: string;
+		image: string;
+	};
+	keywords?: string;
 }
 
-const { title } = Astro.props;
+const { 
+	title = 'Cojocaru David\'s Portfolio',
+	description = 'I am a self-taught developer who loves to build things for the web. I have been coding for 3 years now and I am always looking to learn new things. I am currently working on a few projects, but I am always open to new opportunities.',
+	og = {
+		title: 'Cojocaru David\'s Portfolio',
+		description: 'I am a self-taught developer who loves to build things for the web. I have been coding for 3 years now and I am always looking to learn new things. I am currently working on a few projects, but I am always open to new opportunities.',
+		image: '/og-image.png',
+	},
+	keywords = 'David Cojocaru, Portfolio, Developer, Full Stack, Romania',
+} = Astro.props as Props;
+
 ---
 
 <!doctype html>
@@ -12,40 +35,45 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<meta name="description" content={description} />
+		<meta name="keywords" content={keywords} />
+		<meta property="og:title" content={og.title} />
+		<meta property="og:description" content={og.description} />
+		<meta property="og:image" content={og.image} />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://cojocarudavid.me" />
+		<meta property="og:site_name" content="David Cojocaru" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@cojocarudavidme" />
+		<meta name="twitter:creator" content="@cojocarudavidme" />
+		<meta name="twitter:title" content={og.title} />
+		<meta name="twitter:description" content={og.description} />
+		<meta name="twitter:image" content={og.image} />
+		<meta name="theme-color" content="#171717" />
+		<meta name="color-scheme" content="dark light" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-title" content="David Cojocaru" />
+		<meta name="application-name" content="David Cojocaru" />
+		<meta name="msapplication-TileColor" content="#171717" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/assets/favicons/site.webmanifest">
+		<link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#171717">
+		<link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+		<meta name="msapplication-TileColor" content="#171717">
+		<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#171717">
+		<link rel="stylesheet" href="/assets/css/base.css" />
 	</head>
-	<body>
+	<body class="bg-neutral-200 dark:bg-neutral-900 text-neutral-900 dark:text-neutral-100 font-sans w-full min-h-screen">
+		<Navbar />
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
